Change the replace for @build@ to use getDate()

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ minecraft {
 		replace "@BUILD@", project.bambooBuildNumber
 	}
 	else {
-		replace "@BUILD@", "nightly"
+		replace "@BUILD@", getDate()
 	}
 }
 
