--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
    - "%{build_number} (%{branch} - %{commit}: %{commit_message} : %{author}): %{message} (%{build_url})"
 install: true
 script:
-  - gradle build -PbambooshortPlanName=BBM-Dev -Pdmodcurse=61545 --refresh-dependencies
+  - gradle build cobertura coveralls -PbambooshortPlanName=BBM-Dev -Pdmodcurse=61545 --refresh-dependencies
 cache:
   directories:
     - $HOME/.gradle
@@ -18,3 +18,5 @@ sudo: false
 jdk:
   - oraclejdk7
   - openjdk6
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
