--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
    - "%{build_number} (%{branch} - %{commit}: %{commit_message} : %{author}): %{message} (%{build_url})"
 install: true
 script:
-  - gradle build cobertura coveralls -PbambooshortPlanName=BBM-Dev -Pdmodcurse=61545 --refresh-dependencies
+  - gradle build coveralls jacocoTestReport -PbambooshortPlanName=BBM-Dev -Pdmodcurse=61545 --refresh-dependencies
 cache:
   directories:
     - $HOME/.gradle
