update the JDK's ICBM tests against.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ cache:
     - .gradle
 sudo: false
 jdk:
+  - oraclejdk8
   - oraclejdk7
-  - openjdk6
 after_success:
   - bash <(curl -s https://codecov.io/bash)
