--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version_major=0
 version_minor=4
 version_revis=0
-archivebase=VoltzEngine
-groupid=voltzengine
+archivebase=ICBM
+groupid=icbm
 org=builtbroken
