--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,8 @@ processResources {
 //    // addGameversion "1.7.0", "1.7.4"
 //}
 
+import org.ajoberstar.grgit.Grgit
+
 def gitHash = 'unknown'
 if (new File(projectDir, '.git').exists()) {
     def repo = Grgit.open(project.file('.'))
