--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
-!*.*
-/bin
-
+bin
+/out
+/run
 *.classpath
 *.project
-.gradle/
 .settings/
+CREDITS-fml.txt
+LICENSE-fml.txt
+MinecraftForge-Credits.txt
+MinecraftForge-License.txt
 build/
 eclipse/
-
-
-*.iml
-*.iws
-*.ipr
-*.idea/
+forge-1.6.4-9.11.1.964-changelog.txt
+.gradle/
 output/
-*.bat
-
-!*.lang
-run/
+.cache
+*.iml
+*.ipr
+*.iws
+*.idea/
 logs/
+html/downloads/
+downloads/
+*.xml
+VoltzEngine.txt
+APP-AuthTest/
 CompiledWith.txt
+banned-ips.json
+banned-players.json
+ops.json
+whitelist.json
+libs/CodeChickenCore-1.7.10-1.0.7.47-dev.jar
+libs/CodeChickenLib-1.7.10-1.1.3.140-dev.jar
+libs/NotEnoughItems-1.7.10-1.0.5.118-dev.jar
