make sure gradle compiles against java 8

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ minecraft {
     replace "required-after:VoltzEngine", "required-after:VoltzEngine@[$voltz_engine_version,)"
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+
 dependencies 
 {
     compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf-dev"
