--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ whitelist.json
 libs/CodeChickenCore-1.7.10-1.0.7.47-dev.jar
 libs/CodeChickenLib-1.7.10-1.1.3.140-dev.jar
 libs/NotEnoughItems-1.7.10-1.0.5.118-dev.jar
+ICBM.txt
