--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,10 @@ targetCompatibility = 1.8
 
 dependencies 
 {
+    if (project.hasProperty("bambooshortPlanName") && project.getProperty("bambooshortPlanName") == "BBM-Dev")
     compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf-dev"
+    else 
+    compile "com.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf"
 }
 
 jacocoTestReport {
