add missing imorts

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,19 @@ minecraft {
     replace "required-after:VoltzEngine", "required-after:VoltzEngine@[$voltz_engine_version,)"
 }
 
+import org.ajoberstar.grgit.*
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+def currentJvm = org.gradle.internal.jvm.Jvm.current()
+//println "Current Java version = " + currentJvm
+
+def gitHash = 'unknown'
+if (new File(projectDir, '.git').exists()) {
+    def repo = Grgit.open(project.file('.'))
+    gitHash = repo.log().find().abbreviatedId
+}
 
 jar {
      manifest.mainAttributes(
