get auto curse uploading working

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ libs/CodeChickenCore-1.7.10-1.0.7.47-dev.jar
 libs/CodeChickenLib-1.7.10-1.1.3.140-dev.jar
 libs/NotEnoughItems-1.7.10-1.0.5.118-dev.jar
 ICBM.txt
+changelog.html
