add copy task and update VE version

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,19 @@ apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'jacoco'
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/scripts/forge/deps.gradle'
 
+task copyMethodWithExplicitDependencies{
+    mustRunAfter 'clean'
+    //mustRunAfter 'clearSrc'
+
+    copy {
+        from 'src/gen'
+        into 'src/main'
+        include '**/*'
+    }
+}
+
+tasks.downloadClient.dependsOn copyMethodWithExplicitDependencies
+
 minecraft {
     replace "required-after:voltzengine", "required-after:voltzengine@[$voltz_engine_version,)"
 }
