--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ libs/CodeChickenLib-1.7.10-1.1.3.140-dev.jar
 libs/NotEnoughItems-1.7.10-1.0.5.118-dev.jar
 ICBM.txt
 changelog.html
+src/main/resources/content/icbm/cow/cowSpawner\.json
